--- a/form/index.html
+++ b/form/index.html
@@ -11,7 +11,14 @@
 </head>
 
 <body>
-    <div style="height: 70%; margin-bottom: 10px;">
+    <div style="height: 10%; margin-bottom: 10px; display: inline;">
+        <ul style="display: flex; list-style: none;color: white;">
+            <li style="padding: 10px;"><a href="#" style="color: white;;">home</a></li>
+            <li style="padding: 10px;"><a href="http://localhost:1234/display" style="color: white;">display</a></li>
+            <li style="padding: 10px;">other</li>
+        </ul>
+    </div>
+    <div style="height: 90%; margin-bottom: 10px;">
         <div class="form-body">
             <div class="row">
                 <div class="form-holder">
